--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "recharts": "^2.13.3"
   },
   "devDependencies": {
+    "@types/katex": "^0.16.7",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
